<resources>
    <string name="app_name">CARDS</string>
    <string name="crazy_eight">PLAY CRAZY EIGHTS</string>
    <string name="war">PLAY WAR</string>
    <string name="black_jack">PLAY BLACK JACK</string>
    <string name="magic_trick">MAGIC TRICK</string>
    <string name="exit">EXIT</string>
    <string name="back">BACK</string>
    <string name="prompt1">CHOOSE A SUIT</string>
    <string name="prompt2">CHOOSE A CARD VALUE</string>
    <string name="spades">SPADES</string>
    <string name="hearts">HEARTS</string>
    <string name="diamonds">DIAMONDS</string>
    <string name="clubs">CLUBS</string>
    <string name="submit">SUBMIT</string>
    <string name="magic_result">WAS THIS YOUR CARD?</string>
    <string name="back_to_main">BACK TO MAIN MENU</string>
    <string name="again">TRY AGAIN</string>
    <string name="empty">NULL</string>
    <string name="next">NEXT</string>
    <string name="real_magic_trick">REAL MAGIC TRICK</string>
    <string name="ace_spades">Ace of Spades</string>
    <string name="queen_diamonds">Queen of Diamonds</string>
    <string name="remember">Remember one of the cards below!</string>
    <string name="number_enter">Enter a number 1-26</string>
    <string name="favorite_number">"WHAT IS YOUR\nFAVORITE NUMBER?"</string>
    <string name="invalid">Invalid input</string>
    <string name="pile_1">"WHICH PILE\nIS YOUR CARD IN?"</string>
    <string name="pile_2">HOW ABOUT NOW?</string>
    <string name="pile_3">ONE LAST TIME...</string>
    <string name="logo_transition">Logo transition</string>
    <string name="pile1">PILE 1</string>
    <string name="pile2">PILE 2</string>
    <string name="pile3">PILE 3</string>
    <string name="war_dialog">"It's a WAR!\n\nAre you sure you want to continue?"</string>
    <string name="black_dialog">"It's Black Jack!\n\nWould you like to continue?"</string>
    <string name="crazy_dialog">"It's Crazy Eights!\n\nWould you like to continue?"</string>
    <string name="crazy_eight_title">CRAZY EIGHTS</string>
    <string name="change_suit">Select a suit to change to!</string>
    <string name="war_event">"There was a WAR!\n"</string>
    <string name="comp_played">"Computer\nPlayed"</string>
    <string name="you_played">"You\nPlayed"</string>
    <string name="start_cards_left">26 Cards Left</string>
    <string name="cards_left">Cards Left</string>
    <string name="card_left">Card Left</string>
    <string name="war_title">WAR</string>
    <string name="play_card">PLAY CARD</string>
    <string name="confirm">CONFIRM</string>
    <string name="ace">A</string>
    <string name="question">\?</string>
    <string name="comp_win">Sorry, the computer wins.</string>
    <string name="hum_win">Congratulations! You win!</string>
    <string name="hum_turn">Play a card to fight!</string>
    <string name="war_start">"Let's go! Play a card to fight!"</string>
    <string-array name="value_array">
        <item>Ace</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>Jack</item>
        <item>Queen</item>
        <item>King</item>
    </string-array>
    <string-array name="number_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
    </string-array>
</resources>
