<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.tylerbwong.cardgame.MainActivity">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="50sp" />

    <ImageView
        android:layout_width="114dp"
        android:layout_height="108dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon" />

    <Button
        android:id="@+id/crazy_eight"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:onClick="crazyAction"
        android:stateListAnimator="@anim/button_animator"
        android:text="@string/crazy_eight"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <Button
        android:id="@+id/war"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:onClick="warAction"
        android:stateListAnimator="@anim/button_animator"
        android:text="@string/war"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <Button
        android:id="@+id/black_jack"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:onClick="blackAction"
        android:stateListAnimator="@anim/button_animator"
        android:text="@string/black_jack"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <Button
        android:id="@+id/magic_trick"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:onClick="magicAction"
        android:stateListAnimator="@anim/button_animator"
        android:text="@string/magic_trick"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="exitAction"
        android:stateListAnimator="@anim/button_animator"
        android:text="@string/exit"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />
</LinearLayout>
