<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_vertical_margin"
              android:gravity="center">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/magic_result"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/suit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/again"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="againAction"
            android:stateListAnimator="@anim/button_animator"
            android:text="@string/again"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/back_to_main"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="mainMenuAction"
            android:stateListAnimator="@anim/button_animator"
            android:text="@string/back_to_main"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>