<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/war_title"
        android:textSize="45sp" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_label"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:src="@mipmap/war" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_layout"
        android:layout_below="@id/title_image">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/status_label"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comp_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_cards_left"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/comp_suit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@mipmap/war" />

                <TextView
                    android:id="@+id/comp_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/comp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="@string/comp_played"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/war_start"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/status_label"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hum_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:gravity="right"
                    android:text="@string/you_played"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/hum_suit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@mipmap/war" />

                <TextView
                    android:id="@+id/hum_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textSize="36sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/hum_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/start_cards_left"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:id="@+id/button_layout"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/play_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:onClick="playAction"
            android:stateListAnimator="@anim/button_animator"
            android:text="@string/play_card"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>



</RelativeLayout>