<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/magic_trick"
        android:textColor="@color/colorAccent"
        android:textSize="45sp"/>

    <ImageView
        android:id="@+id/heart_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/heart"/>

    <TextView
        android:id="@+id/subtitle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heart_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/remember"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_layout"
        android:layout_below="@id/subtitle_label"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:onClick="backAction"
            android:stateListAnimator="@anim/button_animator"
            android:text="@string/back"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/next"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:onClick="nextAction"
            android:stateListAnimator="@anim/button_animator"
            android:text="@string/next"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</RelativeLayout>